--- a/styles.css
+++ b/styles.css
@@ -20,9 +20,13 @@ body {
   margin-top: 5rem;
   margin-bottom: 2rem;
   color: #b1b1ff;
+  text-decoration-line: underline;
+  text-decoration-color: red;
+  text-decoration-style: solid;
+  text-underline-position: under;
 }
 
-th {
+.th {
   background-color: #000;
   color: #fff;
   border-radius: 3px;
@@ -35,4 +39,14 @@ footer {
   justify-content: center;
   background-color: whitesmoke;
   border-top: 2px solid rgb(0, 0, 0);
+}
+
+.tbl {
+  margin: 2rem 0;
+  font-size: 20px;
+  letter-spacing: 1px;
+  border: 1px solid #fff;
+  border-radius: 7px;
+  box-shadow: 0.2em 0.2em 0.55em rgba(0, 0, 0, 0.35),
+    0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15);
 }
